@@ -20,14 +20,15 @@ my %virtual_path = ( 'Syslog.pm' => '$(INST_LIBDIR)/Syslog.pm' );
 
 # detect when to use Win32::EvenLog
 my (@extra_params, @extra_prereqs);
-my $use_eventlog = eval "use Win32::EventLog; 1";
 
-if ($use_eventlog) {
+if ($^O =~ /Win32/) {
     print " * Win32::EventLog detected.\n";
     my $name = "PerlLog";
 
     push @extra_prereqs, 
-        Win32 => 0,  "Win32::TieRegistry" => 0,  "Win32::EventLog" => 0;
+        "Win32::EventLog"    => 0,
+        "Win32::TieRegistry" => 0,
+        "Win32::EventLog"    => 0;
 
     $virtual_path{'win32/Win32.pm'   } = '$(INST_LIBDIR)/Syslog/Win32.pm';
     $virtual_path{'win32/PerlLog.dll'} = '$(INST_ARCHAUTODIR)/PerlLog.dll';
@@ -49,15 +50,6 @@ if ($use_eventlog) {
         print DLL unpack "u", $uudata;
         close(DLL);
     }
-}
-elsif ($^O =~ /Win32/) {
-    print <<"NOTICE"
- *** You're running on a Win32 system,  but you lack the Win32::EventLog\a
- *** module, part of the libwin32 distribution. Although Sys::Syslog can 
- *** be used without Win32::EventLog, it won't be very useful except for 
- *** sending remote syslog messages.  If you want to log messages on the 
- *** local host as well, please install libwin32 then Sys::Syslog again.
-NOTICE
 }
 
 # detect when being built in Perl core
